--- a/yolov5_script.ipynb
+++ b/yolov5_script.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "# Getting started: Installing YOLO and requirements\n",
+    "# Getting started: Installing YOLO and requirements.\n",
     "!git clone https://github.com/ultralytics/yolov5\n",
     "%cd yolov5\n",
     "%pip install -q torch==2.3.1 torchvision==0.18.1 torchaudio==2.3.1\n",
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "# Checking if the environment has a GPU available\n",
+    "# Check if a GPU is available for training. Using a GPU significantly accelerates execution time.\n",
     "use_cuda = torch.cuda.is_available()\n",
     "if use_cuda:\n",
     "    print('__CUDNN VERSION:', torch.backends.cudnn.version())\n",
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Getting pre-built YOLO weights\n",
+    "# Getting pre-built YOLOv5 weights.\n",
     "!wget -q https://github.com/ultralytics/yolov5/releases/download/v7.0/yolov5s.pt"
    ]
   },
@@ -94,8 +94,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For API key details, refer to the README\n",
-    "api_key = \"gCE**************7YL\""
+    "# The Roboflow API is public, but requires an API key for access.\n",
+    "# To create an API key, visit: https://docs.roboflow.com/api-reference/authentication\n",
+    "# Replace 'your_api_key_here' with your actual Roboflow API key\n",
+    "api_key = \"your_api_key_here\""
    ]
   },
   {
@@ -107,6 +109,7 @@
    },
    "outputs": [],
    "source": [
+    "# Downloading iNaturalist dataset\n",
     "%pip install -q roboflow\n",
     "\n",
     "from roboflow import Roboflow\n",
@@ -279,14 +282,6 @@
     "plt.axis('off')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d2e5a01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
